# hcomplex

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: construct.rs  construction.rs  lib.rs  test.rs  traits.rs  transform.rs
src/algebra/: approx.rs  construct.rs  format.rs  math.rs  mod.rs  quaternion.rs  random.rs  second_order.rs  specific.rs  tests.rs  traits.rs  vector.rs
src/algebra/tests/: base.rs  complex.rs  mod.rs  quaternion.rs
src/transform/: mod.rs  moebius.rs  tests.rs  traits.rs
src/transform/moebius/: base.rs  mod.rs  random.rs
src/transform/moebius/tests/: base.rs  chain.rs  mod.rs
