[package]
name = "hcomplex"
version = "0.0.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "Lightweight complex and hcomplex algebra library"
documentation = "https://docs.rs/hcomplex"
homepage = "https://github.com/nthend/hcomplex"
repository = "https://github.com/nthend/hcomplex"
readme = "README.md"
keywords = ["complex", "quaternion", "math"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[dependencies]
num-traits = "0.2"
num-complex = "0.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"