[package]
name = "hcomplex"
version = "0.1.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "Lightweight complex and hypercomplex algebra library"
documentation = "https://docs.rs/hcomplex"
homepage = "https://github.com/nthend/hcomplex"
repository = "https://github.com/nthend/hcomplex"
readme = "README.md"
keywords = ["complex", "quaternion", "math"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["num-traits/std", "num-complex/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.3", default-features = false, features = ["libm"] }
vecmat = { path = "../vecmat", default-features = false }

[dev-dependencies]
approx = "0.4"
rand = "0.6.5"
rand_xorshift = "0.1.1"
