[package]
name = "hcomplex"
version = "0.2.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "Lightweight complex and hypercomplex algebra library"
documentation = "https://docs.rs/hcomplex"
homepage = "https://github.com/nthend/hcomplex"
repository = "https://github.com/nthend/hcomplex"
readme = "README.md"
keywords = ["complex", "quaternion", "math"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.3", default-features = false, features = ["libm"] }

rand = { version = "0.7", optional = true }
rand_distr = { version = "0.3", optional = true }
approx = { version = "0.4", optional = true }

[dev-dependencies]
rand_xorshift = "0.2"

[features]
default = ["std"]
std = ["num-traits/std", "num-complex/std"]
random = ["rand", "rand_distr"]

[package.metadata.docs.rs]
features = ["std", "random", "approx"]
